# sk-sampler

./: LICENSE  README.md  sk-sampler.cabal  stack.yaml
app/: Main.hs
data/: merge-100000-5000-5000.out  merge-1200-1000-50000000.out  merge-1200-100000-100000.out  merge-1200-100000-1000000.out  merge-1200-100000-10000000.out  merge-1200-200000-200000.out  merge-1200-200000-2000000.out  merge-1200-300000-300000.out  merge-1200-300000-3000000.out  merge-1200-400000-400000.out  merge-1200-400000-4000000.out  merge-1200-500000-500000.out  merge-1200-500000-5000000.out
scripts/: compute-mean.rb  extract-data.rb
src/: CL.hs  RemySampler.hs  Sampler.hs
