name:                sk-sampler
version:             1.0
synopsis:            SK-sampler - an SK-combinator sampler.
description:         Please see README.md
homepage:            https://github.com/githubuser/sk-sampler#readme
license:             GPL-2
license-file:        LICENSE
author:              Maciej Bendkowski 
maintainer:          maciej.bendkowski@tcs.uj.edu.pl
copyright:           2016 Maciej Bendkowski 
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CL
                     , RemySampler
                     , Sampler
  build-depends:       base >= 4.7 && < 5
                     , array >= 0.5 && < 0.6
                     , random >= 1.1 && < 1.2
                     , MonadRandom >= 0.4 && < 0.5
                     , parallel-io >= 0.3 && < 0.5
  default-language:    Haskell2010

executable sk-sampler
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sk-sampler
                     , parallel-io >= 0.3 && < 0.5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/maciej-bendkowski/sk-sampler
